samples/_failures_safe/1761489971_e4d54a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce260578.c: In function ‘main’:
./samples/SAFE/__tmp_ce260578.c:111:12: error: missing terminating " character
  111 |     printf("Enter %d elements for second
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ce260578.c:111:5: error: expected expression at end of input
  111 |     printf("Enter %d elements for second
      |     ^~~~~~
./samples/SAFE/__tmp_ce260578.c:111:5: error: expected declaration or statement at end of input
